--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -13,11 +13,10 @@ html, body {
 }
 
 body {
-    font-family: 'Merriweather', serif; /* Warm and readable font */
-    background-color: #121212; /* Dark gray for a softer black */
-    color: #f5f5f5; /* Softer white for readability */
-    line-height: 1.8; /* Slightly increased for better spacing */
-    font-weight: 400; /* Normal weight for clarity */
+    font-family: 'Merriweather', serif;
+    background-color: #121212;
+    color: #f5f5f5;
+    line-height: 1.8;
     margin: 0;
     padding: 0;
 }
@@ -250,6 +249,7 @@ header {
     justify-content: space-between;
     align-items: stretch;
     padding: 60px 30px;
+    text-align: center;
     max-width: 1200px;
     margin: auto;
     gap: 15px;
